# VINS-Mono

./: .gitignore  README.md  ros2_commands
camera_model/: CMakeLists.txt  package.xml
camera_model/include/camodocal/camera_models/: PinholeCamera.h  ScaramuzzaCamera.h
camera_model/src/camera_models/: CameraFactory.cc  CataCamera.cc  EquidistantCamera.cc  PinholeCamera.cc  ScaramuzzaCamera.cc
config/bluefox/: bluefox.yaml  bluefox_fisheye_9250.yaml  bluefox_fisheye_9250_320x256.yaml  bluefox_fisheye_bno055.yaml  bluefox_fisheye_new.yaml  bluefox_wide_9250.yaml
config/euroc/: euroc_config.yaml
config/tum/: bluefox_fisheye_9250.yaml
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/include/camodocal/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  EquidistantCamera.h
feature_tracker/launch/: feature_tracker_launch copy.py  feature_tracker_launch.py  feature_tracker_launch_max.py  pose_graph_launch.py  vins_rviz_launch.py
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
log/: latest_build
pose_graph/: CMakeLists copy.txt  CMakeLists.txt  package.xml
pose_graph/launch/: pose_graph_launch.py
pose_graph/src/: keyframe.cpp  keyframe.h  parameters.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp  pose_graph_node.h
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
pose_graph_raspberry/: CMakeLists.txt  package.xml
pose_graph_raspberry/src/: pose_graph_raspberry_node.cpp
rviz/: default.rviz  vins_rviz_config.rviz
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: bluefox_9150.launch  bluefox_fisheye_9150.launch  bluefox_fisheye_bno055.launch  bluefox_wide_9150.launch  realsense_bluefox_9150.launch  vins_estimator_launch.py
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
